test/fail/multiline-text-line-number.mo
"check that the

line number of the error is

The asterisks should
produce an error

" *;
